--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.9",
+    "luxon": "^3.5.0",
     "moment-timezone": "^0.5.46",
     "next": "15.1.0",
     "react": "^19.0.0",
